# mlua_magic

./: Cargo.toml  README.md  test.sh
src/: compile.rs  lib.rs  load.rs
tests/: example.rs
